# waveshare-knob-midi

./: .gitignore  .gitmodules  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
esp32/: .gitignore  BUILD.md  CMakeLists.native.txt  CMakeLists.txt  MIGRATION_SUMMARY.md  lv_drv_conf.h  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-s3-idf  sdkconfig.old
esp32/components/blemidi/: CMakeLists.txt  blemidi.c
esp32/components/blemidi/include/: blemidi.h
esp32/components/i2c_bsp/: CMakeLists.txt
esp32/components/lcd_bl_pwm_bsp/: CMakeLists.txt
esp32/components/midibox_blemidi/: .component_hash  CMakeLists.txt
esp32/components/user_encoder_bsp/: CMakeLists.txt  user_encoder_bsp.c
esp32/include/: lv_conf_sdl.h
esp32/lvgl_conf/: lv_conf.h
esp32/main/: CMakeLists.txt  attributes.h  display_touch.cpp  display_touch.h  idf_component.yml  main.c  main.cpp  midi_model.h  midi_service.cpp  midi_service.h  storage_service.cpp  storage_service.h  ui.cpp  ui.h  ui_components.cpp  ui_components.h  user_config.h
esp32/src/: CMakeLists.txt  hal.cpp  hal.h  hal_esp32.cpp  hal_native.cpp  main.cpp  mouse_cursor_icon.c  native_demo.c
main/: main.c
svelte/: package.json  pnpm-lock.yaml
svelte/src/: app.html
svelte/src/lib/components/: CcAttributeEditor.svelte  ProgramChangeAttributeEditor.svelte
svelte/src/lib/models/: midi-attribute.ts
svelte/src/routes/: +layout.svelte  +page.svelte  +page.ts  app.css
waveshare-knob-midi/: BUILD.md  Cargo.toml  Cargo.toml.backup  MIGRATION.md  README.md  build-esp32.sh  build-linux.sh  build.rs  run-linux.sh
waveshare-knob-midi/.cargo/: config.toml
waveshare-knob-midi/core/: Cargo.toml
waveshare-knob-midi/core/src/: lib.rs
waveshare-knob-midi/esp32/: Cargo.toml
waveshare-knob-midi/esp32/.cargo/: config.toml
waveshare-knob-midi/esp32/src/: main.rs
waveshare-knob-midi/sdl/: Cargo.toml
waveshare-knob-midi/sdl/src/: main.rs
waveshare-knob-midi/src/: main.rs.backup
