[workspace]
members = ["core", "esp32", "sdl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jesse Higginson <kadmium@gmail.com>"]
edition = "2021"

[workspace.dependencies]
log = "0.4"
lvgl = { version = "0.6.2", default-features = false }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
