[package]
name = "waveshare-knob-midi"
version = "0.1.0"
authors = ["Jesse Higginson <kadmium@gmail.com>"]
edition = "2021"

[[bin]]
name = "waveshare-knob-midi"
harness = false

[dependencies]
log = "0.4"
lvgl = { git = "https://github.com/rafaelcaricio/lvgl-rs", default-features = false, features = [
    "unsafe_no_autoinit",
] }
esp-idf-svc = "0.51"

[build-dependencies]
embuild = "0.33"
esp-idf-sys = "0.36"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
