[package]
name = "waveshare-knob-midi-sdl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "waveshare-knob-midi-sdl"
harness = false

[dependencies]
log.workspace = true
waveshare-knob-midi-core = { path = "../core" }
env_logger = "0.11"
embedded-graphics = "0.8"
lvgl = { workspace = true, features = ["drivers", "embedded-graphics"] }
